# grumpy-lite

./: .gitmodules  README.md
src/: configure_droid  configure_linux
src/GrumpyLite/: CMakeLists.txt  GrumpyChat.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
